# vc_portable_app

./: .gitignore  CLI_AUDIO_SENDERS.md  LAUNCH_JP.md  LICENSE.txt  QUICKSTART.md  README-JP.md  README-WINDOWS.md  README.md  README_WEBUI.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  app-windows.js  app.js  audio-devices-windows.js  audio-devices.js  electron-main-windows.js  electron-main.cjs  electron-main.mjs  linux-cli-server.js  package-lock.json  package-windows.json  package.json  preload-windows.js  preload.js  voicechat-core-windows.js  voicechat-core.js  web-server.js
audio-sender-cpp/: CMakeLists.txt  README.md
audio-sender-cpp/src/: audio_base.cpp  audio_base.h  audio_macos.cpp  main.cpp  network.cpp  network.h
audio-sender-rust/: Cargo.toml  README.md
audio-sender-rust/src/: main.rs
gui/: index.html  renderer.js  style.css
gui-web/: index.html  renderer.js  style.css
